--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-fetch-blob": "^0.10.5",
-    "react-native-image-picker": "^0.26.3"
+    "react-native-image-picker": "^0.26.3",
+    "react-native-navbar": "^1.7.1"
   },
   "devDependencies": {
     "babel-jest": "20.0.0",
