add map with marker showing photo location

--- a/ios/myStories/Info.plist
+++ b/ios/myStories/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to your photo gallery.</string>
 	<key>NSCameraUsageDescription</key>
